[metadata]
# replace with your username:
name = ktypes
version = 0.0.3
author = ktvng
author_email = k.tang@yale.edu
description = Type Theoretic Data Annotations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ktvng/ktypes
project_urls =
    Bug Tracker = https://github.com/ktvng/ktypes/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 2 - Pre-Alpha

[options]
package_dir =
    = ktypes
packages = find:
python_requires = >=3.6

[options.packages.find]
where = ktypes